2009-03-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Background killing.
	Fixes: NB#100159

	* src/home/hd-home.c: Replaced call to hd_comp_mgr_app_from_xwindow to
	hd_comp_mgr_client_get_app.
	* src/home/hd-switcher.c: Remove the previous actor when a new one is
	waking up.
	* src/launcher/hd-app-mgr.c: Many changes for app hibernation.
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-app.h: Removed hd_comp_mgr_app_from_xwindow.
	* src/launcher/hd-launcher.c: Used the new unified hd_app_mgr_launch
	instead of hd_app_mgr_relaunch.
	* src/mb/hd-comp-mgr.c: Many, many hacks to make hibernation work.
	* src/mb/hd-comp-mgr.h:

2009-03-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c: Replaced call to canberra (for sound)
	with a warning (for speed). Will be removed when 105635 is fixed.
	* data/transitions.ini: Made transitions really fast to increase
	apparent speed of device.

2009-03-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.24

2009-03-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c
	* data/white-particle.png: New 'twinkling' close transitions, and
	using clutter-cache for the particle texture. Added cache flag for
	canberra, and added debug print if the call takes >100ms	

2009-03-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_add_applet): Restack windows.
	Fixes: NB#104480.

	* debian/changelog: Update

2009-03-12   Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Revert Thomas' patch, we need to make it so that _NET_WM_NAME is free
	from markup and markup will be in new window property:

	Escape titles before we display them so that you can
	use <, >, and & within them.  For some reason, turning
	off markup in titles doesn't do this, so we have to
	escape them explicitly.

	* src/home/hd-title-bar.c:
	* src/mb/hd-decor.c:

2009-03-12  Jan Arne Petersen  <jpetersen@openismus.com>
